added more styling

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ h1 {
 }
 
 .sticky-wrapper {
+    gap: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -145,7 +146,7 @@ h1 {
 }
 
 .sticky-note {
-    min-height: 200px;
+    min-height: 100px;
     background: #999;
     padding: 20px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
@@ -153,6 +154,40 @@ h1 {
     cursor: pointer;
     transition: transform 0.2s, box-shadow 0.2s;
 }
+
+.half-note {
+    max-width: 50%;
+    min-height: 100px;
+    background: #ededed;
+    border: 1px solid #000;
+    padding: 20px;
+    position: relative;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.half-note ul {
+    list-style: none;
+}
+
+.btn {
+    padding: 15px 35px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s;
+    margin: 10px;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.btn-primary {
+    background: white;
+    border: 1px solid#000;
+}
+
 
 p {
     font-size: 0.95em;
@@ -368,7 +403,7 @@ details li {
     animation: fadeInUp 1s ease;
 }
 
-.sticky-note ul{
+.sticky-note ul {
     text-align: left;
     list-style: none;
     margin-bottom: 10px;
@@ -385,18 +420,18 @@ img {
     animation: fadeInUp 1s ease 0.2s backwards;
 }
 
-.highlighted-text{
+.highlighted-text {
     background-color: #fdff32;
     padding: 8px;
     font-style: oblique;
 }
 
-.highlighted-text p{
+.highlighted-text p {
     font-size: 18px;
     font-style: normal;
 }
 
-.no-background{
+.no-background {
     background-color: transparent;
 }
 
@@ -413,7 +448,7 @@ img {
         margin: 0 30%;
     }
 
-    .hero-section{
+    .hero-section {
         flex-direction: row-reverse;
     }
 
@@ -453,11 +488,11 @@ img {
         font-size: 1.3rem;
     }
 
-    .other-element{
+    .other-element {
         width: 60%;
     }
 
-    summary:focus{
+    summary:focus {
         background-color: #979797;
         color: white
     }
