--- a/css/style.css
+++ b/css/style.css
@@ -158,8 +158,8 @@ h1 {
 .half-note {
     max-width: 50%;
     min-height: 100px;
-    background: #ededed;
-    border: 1px solid #000;
+    background: #ffffff;
+    border: 1px dashed #000;
     padding: 20px;
     position: relative;
     transition: transform 0.2s, box-shadow 0.2s;
@@ -187,6 +187,10 @@ h1 {
     border: 1px solid#000;
 }
 
+.btn:focus{
+    background: #333;
+    color: white;
+}
 
 p {
     font-size: 0.95em;
